[package]
name = "ciphergen"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
clap = { version = "4.3.8", features = ["derive"] }
env_logger = "0.10.0"
hex = "0.4.3"
log = "0.4.19"
rand = "0.8.5"
