[package]
name = "ciphergen"
version = "1.2.0"
edition = "2021"

[dependencies]
base64 = "0.21.2"
clap = { version = "4.3.8", features = ["derive"] }
env_logger = "0.11.2"
hex = "0.4.3"
log = "0.4.19"
rand = "0.8.5"
bytesize = "1.2.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
digest = "0.10.7"
tabled = "0.15.0"
md-5 = "0.10.6"
rayon = "1.10.0"
