[package]
name = "ciphergen"
version = "1.3.0"
authors = ["Anastasiya Polina Soyka <apsoyka@protonmail.com>"]
edition = "2021"
description = "CipherGen is a native Rust program that provides a command-line interface (CLI) for generating cryptographically-secure secret keys, such as passwords and passphrases."
readme = "README.md"
repository = "https://github.com/ciphergen/ciphergen"
license = "MIT"
keywords = ["cryptography", "entropy", "password"]

[dependencies]
base64 = "0.21.2"
clap = { version = "4.3.8", features = ["derive"] }
env_logger = "0.11.2"
hex = "0.4.3"
log = "0.4.19"
rand = "0.8.5"
bytesize = "1.2.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
digest = "0.10.7"
tabled = "0.15.0"
md-5 = "0.10.6"
rayon = "1.10.0"
png = "0.17.13"
serde = { version = "1.0.203", features = ["derive"] }
bincode = "1.3.3"
directories = "5.0.1"
zstd = "0.13.1"
include_dir = "0.7.4"
